--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
+
 section {
 	font-size: 16px;
 	background-color: black;
@@ -24,11 +25,15 @@ div#right {
 	width: 100px;
 	border: 1px solid black;
 	display: inline-block;
+	text-align: center;
+	color: white;
+	padding: .25rem;
 
 }
 .card:hover {
 	cursor: grab;
+	border: 2px solid yellow;
 }
-.card:active {
+.card:active  {
 	cursor: grabbing;
 }
